# edge-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: 01_hello.py  02_tools.py  03_session.py  04_guardrail.py  05_router.py  06_evaluator.py  07_fallback.py  08_custom_provider.py  09_guardrail_router.py  10_pipeline.py  11_full_chain.py  12_mcp.py  13_mcp_config.py  14_ollama.py  15_bedrock.py  benchmark_ollama.py  test_structured_output.py
examples/mcp_demo/: mcp.json  mcp_demo.py
examples/multi_tool_demo/: main.py
examples/multi_tool_demo/tools/: __init__.py  calendar_tools.py  math_tools.py  notes_tools.py  weather_tools.py
src/edge_agent/: __init__.py  session.py  template.py  tool.py
src/edge_agent/providers/: __init__.py  gemini.py  ollama.py
tests/: conftest.py  test_agent.py  test_agent_types.py  test_bedrock_provider.py  test_chain.py  test_dotenv.py  test_gemini_provider.py  test_mcp.py  test_ollama_provider.py  test_provider_base.py  test_schema.py  test_template.py  test_tool.py  test_types.py
