[project]
name = "edge-agent"
version = "0.1.0"
description = "Small stdlib-only agent framework with tools, MCP, chains, and modern agent types"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "danieldagot", email = "daniel.willnotreplay@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"
